src/content/docs/versions/ts-sdk/0.2.x/outputs/mp4.mdx
---
title: MP4
sidebar:
  order: 2
slug: ts-sdk/0.2.x/ts-sdk/outputs/mp4
---

import { Aside, Code, Badge } from "@astrojs/starlight/components";
import CollapsibleDetails from "@components/CollapsibleDetails.astro";

<Badge text="Node.js" variant="tip" size="large" />

<br />

<br />

An output type that allows recording video and audio to MP4 file.

## Usage

```tsx title=mp4OutputExample.tsx
import Smelter from "@swmansion/smelter-node";
import { View } from "@swmansion/smelter";

async function run() {
  const smelter = new Smelter();
  await smelter.init();
  await smelter.registerOutput("example", <View />, {
    type: "mp4",
    serverPath: "./output.mp4",
    video: {
      encoder: { type: "ffmpeg_h264" },
      resolution: { width: 1920, height: 1080 },
    },
  });
}
void run();
```

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type RegisterMp4Output = {
    type: "mp4";
    serverPath: string;
    video?: Mp4VideoOptions;
    audio?: Mp4AudioOptions;
  };
  ```
</CollapsibleDetails>

Parameters for registering an output that writes composed video/audio to MP4 file.

<Aside>Exactly one of `url` or `serverPath` has to be defined.</Aside>

## Properties

### serverPath

Path to the MP4 file, specifying its location on the server where Smelter is deployed.

* **Type**: `string`

***

### video

Video track configuration.

* **Type**: [`Mp4VideoOptions`](#mp4videooptions)

***

### audio

Audio track configuration.

* **Type**: [`Mp4AudioOptions`](#mp4audiooptions)

## Mp4VideoOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type Mp4VideoOptions = {
  resolution: {
    width: number;
    height: number;
  };
  sendEosWhen?: OutputEndCondition;
  encoder: Mp4VideoEncoderOptions;
  root: React.ReactElement;
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

Video track configuration options.

### Properties

#### resolution

Output resolution in pixels.

* **Type**: `{ width: number; height: number;}`

***

#### sendEosWhen

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](/ts-sdk/0.2.x/outputs/mp4#outputendcondition)

***

#### encoder

Video encoder options.

* **Type**: [`Mp4VideoEncoderOptions`](/ts-sdk/0.2.x/outputs/mp4#mp4videoencoderoptions)

***

#### root

Root of a component tree/scene that should be rendered for the output.

* **Type**: `ReactNode`

## Mp4VideoEncoderOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type Mp4VideoEncoderOptions = {
    type: "ffmpeg_h264";
    preset: 
      | "ultrafast"
      | "superfast"
      | "veryfast"
      | "faster"
      | "fast"
      | "medium"
      | "slow"
      | "slower"
      | "veryslow"
      | "placebo";
    ffmpegOptions?: Record<string, string>;
  }
`}
    lang="tsx"
  />
</CollapsibleDetails>

Configuration for the video encoder, based on the selected codec.

### Properties (type: “ffmpeg\_h264”)

#### preset

Video output encoder preset. Visit <a href="https://trac.ffmpeg.org/wiki/Encode/H.264#Preset" target="_blank">FFmpeg docs</a> to learn more.

* **Type**: `"ultrafast" | "superfast" | "veryfast" | "faster" | "fast" | "medium" | "slow" | "slower" | "veryslow" | "placebo"`
* **Default value**: `fast`
* **Supported values**:
  * `ultrafast`
  * `superfast`
  * `veryfast`
  * `faster`
  * `fast`
  * `medium`
  * `slow`
  * `slower`
  * `veryslow`
  * `placebo`

***

#### ffmpegOptions

Raw FFmpeg encoder options. Visit <a href="https://ffmpeg.org/ffmpeg-codecs.html" target="_blank">FFmpeg docs</a> to learn more.

* **Type**: `Record<string, string>`

## Mp4AudioOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type Mp4AudioOptions = {
  mixingStrategy?: "sum_clip" | "sum_scale";
  sendEosWhen?: OutputEndCondition;
  encoder: Mp4AudioEncoderOptions;
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

Parameters of an audio source included in the stream.

### Properties

#### mixingStrategy

Specifies how audio should be mixed.

* **Type**: `"sum_clip" | "sum_scale"`
* **Default value**: `"sum_clip"`
* **Supported values**:
  * `sum_clip` - First, the input samples are summed. If the result exceeds the i16 PCM range, it is clipped.
  * `sum_scale` - First, the input samples are summed. If the result exceeds the i16 PCM range, the summed samples are scaled down by a factor to fit within the range.

***

#### sendEosWhen

Condition for termination of the output stream based on the input streams states. If output includes both audio and video streams, then EOS needs to be sent for every type.

* **Type**: [`OutputEndCondition`](/ts-sdk/0.2.x/outputs/mp4#outputendcondition)

***

#### encoder

Audio encoder options.

* **Type**: [`Mp4AudioEncoderOptions`](/ts-sdk/0.2.x/outputs/mp4#mp4audioencoderoptions)

## Mp4AudioEncoderOptions

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type Mp4AudioEncoderOptions = {
  type: "aac";
  channels: "mono" | "stereo";
  sampleRate?: number;
}
`}
    lang="tsx"
  />
</CollapsibleDetails>

Configuration for the audio encoder, based on the selected codec.

### Properties(type: "aac")

#### channels

Channels configuration

* **Type**: `"mono" | "stereo"`
* **Supported values**:
  * `mono` - Mono audio (single channel).
  * `stereo` - Stereo audio (two channels).

#### sampleRate

* **Type**: `number`
* **Default value**: `44100`
* **Supported values**: `8000`, `16000`, `24000`, `44100`, `48000`

## OutputEndCondition

<CollapsibleDetails summaryTitle="Type definitions" open>
  <Code
    code={`
type OutputEndCondition = 
  | { anyOf: string[]; }
  | { allOf: string[]; }
  | { anyInput: boolean; }
  | { allInputs: boolean; };
`}
    lang="tsx"
  />
</CollapsibleDetails>

Defines when the output stream should end based on the state of the input streams. Only one of the nested fields can be set at a time.

By default, the input stream is considered finished/ended when:

* TCP connection was dropped/closed.
* RTCP Goodbye packet (BYE) was received.
* MP4 track has ended.
* Input was unregistered already (or never registered).

### Properties

#### anyOf

List of the input streams. The output stream will terminate if any stream in the list finishes.

* **Type**: `string[]`

***

#### allOf

List of the input streams. The output stream will terminate when all streams in the list finish.

* **Type**: `string[]`

***

#### anyInput

Terminate the output stream if any of the input streams end, including streams added after the output was registered. Notably, the output stream will not terminate if no inputs were ever connected.

* **Type**: `boolean`

***

#### allInputs

Terminate the output stream only when all input streams have finished. Notably, the output stream will terminate if no inputs were ever connected.

* **Type**: `boolean`
